Fixed horizontal scrolling bug on mobile screen

--- a/styles/blocks/people/__cards/people__cards.css
+++ b/styles/blocks/people/__cards/people__cards.css
@@ -17,6 +17,8 @@
 
 @media screen and (max-width: 767px) {
   .people__cards {
+    width: calc(100% - 2 * 20px);
+    margin: 0 auto;
     margin-top: 40px;
   }
 }
