--- a/styles/blocks/people/people.css
+++ b/styles/blocks/people/people.css
@@ -16,6 +16,5 @@
 @media screen and (max-width: 767px) {
   .people {
     margin: 10px auto;
-    padding: 0 20px;
   }
 }
